# adaptive-intelligence

./: .gitignore  CHANGELOG.md  LICENSE  README.md  adaptive_intelligence-1.0.1-py3-none-any.whl  adaptive_intelligence-2.0.0-py3-none-any.whl  adaptive_intelligence-4.0.0-py3-none-any.whl  adaptive_intelligence-4.0.2-py3-none-any.whl  adaptive_intelligence-4.0.3-py3-none-any.whl  pyproject.toml
adaptive_intelligence/: __init__.py
adaptive_intelligence/agentic/: __init__.py
adaptive_intelligence/context/: __init__.py
adaptive_intelligence/core/: __init__.py  config.py  engine.py  response.py
adaptive_intelligence/evaluation/: __init__.py
adaptive_intelligence/graph/: __init__.py
adaptive_intelligence/harness/: __init__.py
adaptive_intelligence/indexes/: __init__.py  base.py  keyword_index.py  page_index.py  vector_index.py
adaptive_intelligence/ingestion/: __init__.py  chunker.py  engine.py  parser.py
adaptive_intelligence/llm/: __init__.py
adaptive_intelligence/loop/: __init__.py
adaptive_intelligence/mcp/: __init__.py
adaptive_intelligence/memory/: __init__.py  persistent.py
adaptive_intelligence/prompts/: __init__.py
adaptive_intelligence/query/: __init__.py
adaptive_intelligence/rl/: __init__.py  multi_query.py  ppo.py  pretrained.py  reranker.py
adaptive_intelligence/security/: __init__.py
adaptive_intelligence/utils/: __init__.py
demo_harness_loopengineering/: demo.py  requirements.txt
demo_harness_loopengineering/data/: financial.txt  medical.txt  risks.txt
demo_harness_loopengineering/demo_state_harness/: bm25_index.pkl  graph.json  long_term_memory.json  page_index.pkl
demo_harness_loopengineering/demo_state_harness/memory/: learning_memory.json
demo_mcp_agenticai/: README.md  demo_agentic.py  demo_basic.py  demo_mcp_client.py  demo_mcp_server.py  demo_tools.py  requirements.txt
demo_mcp_agenticai/data/financial/: q2_report.txt  q3_report.txt  (+1 more)
demo_mcp_agenticai/demo_state/: bm25_index.pkl  graph.json  long_term_memory.json
demo_mcp_agenticai/demo_state_agentic/: bm25_index.pkl  graph.json  long_term_memory.json
demo_mcp_agenticai/demo_state_tools/: long_term_memory.json  page_index.pkl
demo_mcp_agenticai/tools/: financial_tools.py  healthcare_tools.py
docs/: api_reference.md  architecture.md  complete_documentation.md  configuration.md  v2_specification.md
examples/: advanced_usage.py  quickstart.py
notebooks/: adaptive_intelligence__dhyuti_demo.ipynb  adaptive_intelligence_harness_demo.ipynb  adaptive_intelligence_v2_demo.ipynb  adaptive_intelligence_v2_local_hf.ipynb  adaptive_intelligence_v2_three_way.ipynb  adaptive_intelligence_v3_demo.ipynb  adaptive_intelligence_v4_demo.ipynb  traditional_rag_vs_adaptive_intelligence.ipynb
paper/: adaptive_intelligence_paper.tex
tests/: test_core.py  test_evaluation.py  test_graph.py  test_ingestion.py  test_query.py  test_rl.py
(+11 files in other folders)
