[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-intelligence"
version = "4.0.0"
description = "Self-improving retrieval framework with RL routing, context engineering, MCP integration, agentic workflow, and persistent memory."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Venkatkumar Rajan", email = "venkatkumarr.vk99@gmail.com"},
]
keywords = [
    "rag", "retrieval", "reinforcement-learning", "knowledge-graph",
    "document-intelligence", "adaptive", "self-improving",
    "llm", "ai", "nlp", "evaluation", "self-learning",
    "context-engineering", "mcp", "agentic", "memory",
    "tool-use", "multi-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
vector = ["chromadb>=0.4.0"]
openai = ["openai>=1.0.0"]
huggingface = ["transformers>=4.35.0", "torch>=2.0.0"]
pdf = ["PyMuPDF>=1.23.0"]
docx = ["python-docx>=1.0.0"]
xlsx = ["openpyxl>=3.1.0"]
pptx = ["python-pptx>=0.6.21"]
sql = ["sqlalchemy>=2.0.0"]
rerank = ["sentence-transformers>=2.2.0"]
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0"]
all = [
    "chromadb>=0.4.0",
    "openai>=1.0.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://pypi.org/project/adaptive-intelligence/"
Documentation = "https://github.com/VK-Ant/adaptive-intelligence#readme"
Repository = "https://github.com/VK-Ant/adaptive-intelligence"
Issues = "https://github.com/VK-Ant/adaptive-intelligence/issues"
PyPI = "https://pypi.org/project/adaptive-intelligence/"
Portfolio = "https://vk-ant.github.io/Venkatkumar/"

[tool.setuptools.packages.find]
include = ["adaptive_intelligence*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
